@@ -219,51 +219,6 @@ def test_queue_put_timeout(kernel):
     ]
 
 
-def test_queue_sync(kernel):
-    results = []
-    async def consumer(queue, label):
-        while True:
-            item = await queue.get()
-            if item is None:
-                break
-            results.append((label, item))
-            await queue.task_done()
-        await queue.task_done()
-        results.append(label + ' done')
-
-    def produce_item(queue, item):
-        queue.put(item)
-
-    async def producer():
-        queue = Queue()
-        results.append('producer_start')
-        await spawn(consumer(queue, 'cons1'))
-        await spawn(consumer(queue, 'cons2'))
-        await sleep(0.1)
-        for n in range(4):
-            produce_item(queue, n)
-            await sleep(0.1)
-        for n in range(2):
-            produce_item(queue, None)
-        results.append('producer_join')
-        await queue.join()
-        results.append('producer_done')
-
-    kernel.run(producer())
-
-    assert results == [
-        'producer_start',
-        ('cons1', 0),
-        ('cons2', 1),
-        ('cons1', 2),
-        ('cons2', 3),
-        'producer_join',
-        'cons1 done',
-        'cons2 done',
-        'producer_done',
-    ]
-
-
 def test_priority_queue(kernel):
     results = []
     priorities = [4, 2, 1, 3]
@@ -350,7 +305,6 @@ def test_univ_queue_sync_async(kernel):
         await q.put(None)
         await t1.join()
         assert result == [0,1,2,3,4,5,6,7,8,9]
-        await q.shutdown()
 
     kernel.run(main())
 
@@ -380,7 +334,6 @@ def test_univ_queue_async_sync(kernel):
         await q.put(None)
         await run_in_thread(t1.join)
         assert result == [0,1,2,3,4,5,6,7,8,9]
-        await q.shutdown()
 
     kernel.run(main())
 
@@ -413,7 +366,6 @@ def test_univ_queue_cancel(kernel):
         await q.put(None)
         await t1.join()
         assert result == [0,1,2,3,4,5,6,7,8,9]
-        await q.shutdown()
 
     kernel.run(main())
 
@@ -447,8 +399,7 @@ def test_univ_queue_multiple_consumer(kernel):
         await t1.join()
         await t2.join()
         await t3.join()
-        assert set(range(1000)) == set(result)
-        await q.shutdown()
+        assert list(range(1000)) == sorted(result)
 
     kernel.run(main())
 
@@ -493,7 +444,6 @@ def test_univ_queue_multiple_kernels(kernel):
         t3.join()
 
         assert list(range(1000)) == sorted(result)
-        await q.shutdown()
 
     kernel.run(main())
 
